-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.6.0
-
None
-
Windows 7 64 bit
MSVC2013 32 bit
Ran into this when starting Qt Creator:
1 SafeRelease<IDirect3D9 *> angleutils.h 60 0x58db193b 2 rx::Renderer9::release Renderer9.cpp 162 0x58dce921 3 rx::Renderer9::~Renderer9 Renderer9.cpp 151 0x58db7fb5 4 rx::Renderer9::`scalar deleting destructor' libGLESv2d 0x58dba546 5 SafeDelete<rx::RendererD3D> angleutils.h 68 0x58bab0e0 6 rx::CreateRendererD3D DisplayD3D.cpp 137 0x58bac0c3 7 rx::DisplayD3D::initialize DisplayD3D.cpp 250 0x58badc10 8 egl::Display::initialize Display.cpp 231 0x58af6cee 9 egl::Initialize entry_points_egl.cpp 59 0x58c21e3c 10 eglInitialize libEGL.cpp 87 0x5d521888 11 QWindowsEGLStaticContext::create qwindowseglcontext.cpp 404 0x5b279f8b 12 QWindowsStaticOpenGLContext::doCreate qwindowsintegration.cpp 394 0x5b220e5a 13 QWindowsStaticOpenGLContext::create qwindowsintegration.cpp 403 0x5b220e18 14 QWindowsIntegration::staticOpenGLContext qwindowsintegration.cpp 436 0x5b22084d 15 QWindowsIntegration::createPlatformOpenGLContext qwindowsintegration.cpp 408 0x5b220794 16 QOpenGLContext::create qopenglcontext.cpp 604 0x592301ee 17 QtWebEngineCore::initialize qtwebenginecoreglobal.cpp 88 0x100f655c 18 initialize qtwebenginewidgetsglobal.cpp 50 0x53f64718 19 qAddPreRoutine qcoreapplication.cpp 251 0x58410daa 20 initialize_ctor_function qtwebenginewidgetsglobal.cpp 52 0x53f6472e ... <More>
- duplicates
-
QTBUG-46720 PyQt /Windows: QtWebEngineWidgets fail to run with ANGLE
-
- Closed
-
- is duplicated by
-
QTCREATORBUG-16122 libGLESv2.dll assertion failure while running Qt Creator on Windows
-
- Closed
-
- relates to
-
QTCREATORBUG-16147 Creator hangs on startup when Help plugin is enabled
-
- Closed
-
-
QTBUG-55501 Assertion failure in LibGlESv2d when using webengine
-
- Closed
-
| For Gerrit Dashboard: QTBUG-52201 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 172061,8 | Do not call QOpenGLContext::openGLModuleType() from MainDll | 5.7.1 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 174097,1 | Do not call QOpenGLContext::openGLModuleType() from MainDll | 5.8 | qt/qtwebengine | Status: ABANDONED | 0 | 0 |
| 179184,2 | Do not call QOpenGLContext::openGLModuleType() from MainDll | 5.6.2 | qt/qtwebengine | Status: ABANDONED | +2 | 0 |
| 179368,1 | Do not call QOpenGLContext::openGLModuleType() from MainDll | 5.6 | qt/qtwebengine | Status: ABANDONED | -2 | 0 |