Do not call QOpenGLContext::openGLModuleType() from MainDll

In case of dynamic OpenGL on Windows this ends on
calling QWindowsIntegration::staticOpenGLContext() from MainDll
which in case of angle will end up badly.

Add warning message when webengine is loaded from plugin
and context is not initialized.

Task-number: QTBUG-52201
Task-number: QTBUG-55501
Task-number: QTBUG-56020
Change-Id: I03570cad5f686c4a63910c71136bf3eb9499f223
Reviewed-by: Kai Koehne <kai.koehne@qt.io>